# n8n-codex

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SESSION_NOTES.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
claude-agent/: Dockerfile  pyproject.toml  requirements.txt
claude-agent/knowledge/: faqs.md  network_security.md  troubleshooting.md  unifi_10x_features.md  wifi_best_practices.md
claude-agent/src/: __init__.py  config.py  main.py
claude-agent/src/agent/: __init__.py  confirmations.py  core.py  prompts.py  tools.py
claude-agent/src/api/: routes.py
claude-agent/src/knowledge/: __init__.py  embeddings.py
claude-agent/src/slack/: __init__.py  handler.py
claude-agent/src/unifi/: __init__.py  controller_api.py  integration_api.py
claude-agent/tests/: test_config.py
docs/: N8N_ENCRYPTION_KEY_ROTATION.md  PROJECT_REVIEW.md  PROJECT_REVIEW_GEMINI.md  RECOMMENDATIONS.md
workflows/: openai_codex_inference.json  unifi_best_practices_audit.json  unifi_health_to_slack.json
